add: swagger init + error model for http response
